--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -18,7 +18,9 @@
         android:id="@+id/difficulty_header"
         android:layout_below="@id/player_name_input"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="38dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="38dp"
+        tools:ignore="RtlHardcoded" />
 
 
     <EditText
@@ -31,8 +33,10 @@
         android:layout_marginTop="32dp"
         android:layout_below="@id/name_header"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:labelFor="@id/player_name_input"
-        android:autofillHints=""/>
+        android:autofillHints=""
+        tools:ignore="RtlHardcoded" />
 
     <TextView
         android:text="@string/name_header"
@@ -40,6 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/name_header"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="32dp" />
 
     <Spinner
@@ -47,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/difficulty_header"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="32dp"
         android:id="@+id/difficulty_spinner" />
 
@@ -55,10 +61,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="250dp"
-        android:layout_marginEnd="250dp"
+        android:layout_marginRight="250dp"
         android:layout_marginBottom="30dp"
         android:onClick="onAddPressed"
         android:text="@string/add" />
@@ -68,10 +74,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="250dp"
-        android:layout_marginStart="250dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginBottom="27dp"
         android:onClick="onCancelPressed"
         android:text="@string/Cancel" />
@@ -81,8 +87,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="34dp"
+        android:layout_marginLeft="34dp"
         android:layout_marginTop="344dp"
         android:text="@string/skill1" />
 
@@ -91,10 +99,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/pilot_header"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="-23dp"
         android:layout_toEndOf="@+id/pilot_header"
+        android:layout_toRightOf="@+id/pilot_header"
+        android:autofillHints=""
         android:ems="2"
-        android:inputType="number"
-        android:autofillHints=""/>
+        android:inputType="number" />
 
 
     <ImageButton
@@ -111,7 +123,7 @@
 
     <ImageButton
         android:id="@+id/pilot_button_down"
-        android:layout_toEndOf="@+id/pilot_button_up"
+        android:layout_toRightOf="@+id/pilot_button_up"
         android:layout_alignTop="@+id/pilot_button_up"
         android:onClick="onPilotDownPressed"
         android:background="@android:color/background_light"
@@ -128,9 +140,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="129dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="344dp"
         android:layout_toEndOf="@+id/pilot_points"
+        android:layout_toRightOf="@+id/pilot_points"
         android:text="@string/skill2" />
 
     <EditText
@@ -138,18 +152,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/fighter_header"
-        android:layout_toEndOf="@+id/fighter_header"
-        android:ems="2"
-        android:inputType="number"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="-20dp"
+        android:layout_toRightOf="@+id/fighter_header"
         android:autofillHints=""
-        />
+        android:ems="2"
+        android:inputType="number" />
 
 
     <ImageButton
         android:id="@+id/fighter_button_up"
         android:layout_below="@+id/fighter_header"
         android:layout_alignStart="@+id/pilot_button_up"
+        android:layout_alignLeft="@+id/pilot_button_up"
         android:layout_marginStart="196dp"
+        android:layout_marginLeft="196dp"
         android:layout_marginTop="0dp"
         android:onClick="onFighterUpPressed"
         android:background="@android:color/background_light"
@@ -162,7 +179,7 @@
 
     <ImageButton
         android:id="@+id/fighter_button_down"
-        android:layout_toEndOf="@+id/fighter_button_up"
+        android:layout_toRightOf="@+id/fighter_button_up"
         android:layout_alignTop="@+id/fighter_button_up"
         android:onClick="onFighterDownPressed"
         android:background="@android:color/background_light"
@@ -178,21 +195,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="442dp"
-        android:text="@string/skill3" />
+        android:text="@string/skill3"
+        tools:ignore="RtlHardcoded" />
 
     <EditText
         android:id="@+id/trader_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/trader_header"
-        android:layout_toEndOf="@+id/trader_header"
-        android:ems="2"
-        android:inputType="number"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="-20dp"
+        android:layout_toRightOf="@+id/trader_header"
         android:autofillHints=""
-        />
+        android:ems="2"
+        android:inputType="number" />
 
 
     <ImageButton
@@ -209,7 +230,7 @@
 
     <ImageButton
         android:id="@+id/trader_button_down"
-        android:layout_toEndOf="@+id/trader_button_up"
+        android:layout_toRightOf="@+id/trader_button_up"
         android:layout_alignTop="@+id/trader_button_up"
         android:onClick="onTraderDownPressed"
         android:background="@android:color/background_light"
@@ -218,16 +239,18 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="@string/trader_down"/>
+        android:contentDescription="@string/trader_down" />
 
     <TextView
         android:id="@+id/engineer_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="115dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="442dp"
         android:layout_toEndOf="@+id/trader_points"
+        android:layout_toRightOf="@+id/trader_points"
         android:text="@string/skill4" />
 
     <EditText
@@ -235,18 +258,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/engineer_header"
-        android:layout_toEndOf="@+id/engineer_header"
-        android:ems="2"
-        android:inputType="number"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="-22dp"
+        android:layout_toRightOf="@+id/engineer_header"
         android:autofillHints=""
-        />
+        android:ems="2"
+        android:inputType="number" />
 
 
     <ImageButton
         android:id="@+id/engineer_button_up"
         android:layout_below="@+id/engineer_header"
         android:layout_alignStart="@+id/trader_button_up"
+        android:layout_alignLeft="@+id/trader_button_up"
         android:layout_marginStart="196dp"
+        android:layout_marginLeft="196dp"
         android:layout_marginTop="0dp"
         android:onClick="onEngineerUpPressed"
         android:background="@android:color/background_light"
@@ -259,7 +285,7 @@
 
     <ImageButton
         android:id="@+id/engineer_button_down"
-        android:layout_toEndOf="@+id/engineer_button_up"
+        android:layout_toRightOf="@+id/engineer_button_up"
         android:layout_alignTop="@+id/engineer_button_up"
         android:onClick="onEngineerDownPressed"
         android:background="@android:color/background_light"
@@ -275,8 +301,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="118dp"
+        android:layout_marginLeft="118dp"
         android:layout_marginTop="298dp"
         android:text="@string/remaining" />
 
@@ -285,11 +313,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/remaining_header"
-        android:layout_toEndOf="@+id/remaining_header"
-        android:ems="2"
-        android:inputType="number"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="-17dp"
+        android:layout_toRightOf="@+id/remaining_header"
         android:autofillHints=""
-        />
+        android:ems="2"
+        android:inputType="number" />
 
 
 </RelativeLayout>
