--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -95,20 +95,20 @@
         android:layout_marginTop="344dp"
         android:text="@string/skill1" />
 
-    <EditText
+    <TextView
         android:id="@+id/pilot_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/pilot_header"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="-23dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/pilot_header"
         android:layout_toRightOf="@+id/pilot_header"
         android:autofillHints=""
         android:ems="2"
         android:inputType="number"
-        android:labelFor="@id/pilot_points"/>
+        android:labelFor="@id/pilot_points" />
 
 
     <ImageButton
@@ -149,36 +149,38 @@
         android:layout_toRightOf="@+id/pilot_points"
         android:text="@string/skill2" />
 
-    <EditText
+    <TextView
         android:id="@+id/fighter_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/fighter_header"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="-20dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/fighter_header"
         android:layout_toRightOf="@+id/fighter_header"
         android:autofillHints=""
         android:ems="2"
         android:inputType="number"
-        android:labelFor="@id/fighter_points"/>
+        android:labelFor="@id/fighter_points" />
 
 
     <ImageButton
         android:id="@+id/fighter_button_up"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/fighter_header"
         android:layout_alignStart="@+id/pilot_button_up"
         android:layout_alignLeft="@+id/pilot_button_up"
-        android:layout_marginStart="196dp"
-        android:layout_marginLeft="196dp"
-        android:layout_marginTop="0dp"
-        android:onClick="onFighterUpPressed"
-        android:background="@android:color/background_light"
-        android:src="@drawable/inc_arrow"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="@string/fighter_up" />
+        android:layout_marginStart="169dp"
+        android:layout_marginLeft="169dp"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/background_light"
+        android:contentDescription="@string/fighter_up"
+        android:onClick="onFighterUpPressed"
+        android:scaleType="fitXY"
+        android:src="@drawable/inc_arrow" />
 
     <ImageButton
         android:id="@+id/fighter_button_down"
@@ -206,18 +208,18 @@
         android:text="@string/skill3"
         tools:ignore="RtlHardcoded" />
 
-    <EditText
+    <TextView
         android:id="@+id/trader_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/trader_header"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="-20dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/trader_header"
         android:layout_toRightOf="@+id/trader_header"
         android:autofillHints=""
-        android:ems="2"
-        android:inputType="number"
-        android:labelFor="@id/trader_points"/>
+        android:ems="2" />
 
 
     <ImageButton
@@ -257,36 +259,38 @@
         android:layout_toRightOf="@+id/trader_points"
         android:text="@string/skill4" />
 
-    <EditText
+    <TextView
         android:id="@+id/engineer_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/engineer_header"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="-22dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/engineer_header"
         android:layout_toRightOf="@+id/engineer_header"
         android:autofillHints=""
         android:ems="2"
         android:inputType="number"
-        android:labelFor="@id/engineer_points"/>
+        android:labelFor="@id/engineer_points" />
 
 
     <ImageButton
         android:id="@+id/engineer_button_up"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/engineer_header"
         android:layout_alignStart="@+id/trader_button_up"
         android:layout_alignLeft="@+id/trader_button_up"
-        android:layout_marginStart="196dp"
-        android:layout_marginLeft="196dp"
-        android:layout_marginTop="0dp"
-        android:onClick="onEngineerUpPressed"
-        android:background="@android:color/background_light"
-        android:src="@drawable/inc_arrow"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="@string/engineer_up" />
+        android:layout_marginStart="169dp"
+        android:layout_marginLeft="169dp"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/background_light"
+        android:contentDescription="@string/engineer_up"
+        android:onClick="onEngineerUpPressed"
+        android:scaleType="fitXY"
+        android:src="@drawable/inc_arrow" />
 
     <ImageButton
         android:id="@+id/engineer_button_down"
@@ -313,18 +317,18 @@
         android:layout_marginTop="298dp"
         android:text="@string/remaining" />
 
-    <EditText
+    <TextView
         android:id="@+id/remaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/remaining_header"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="-17dp"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginTop="-1dp"
         android:layout_toRightOf="@+id/remaining_header"
         android:autofillHints=""
         android:ems="2"
         android:inputType="number"
-        android:labelFor="@id/remaining"/>
+        android:labelFor="@id/remaining" />
 
 
 </RelativeLayout>
